# PkBoost

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DRIFTBENCHMARK.md  LICENSE  LICENSE-GPL  Makefile  PKBoost.ipynb  PKBoostPython.md  README.md  Untitled.ipynb  alb_metrics.csv  all_rust_code.txt  drift_comparison_all.py  drift_detailed_results.csv  kaggle_s6e1_pkboost.ipynb  prepare_data.py  pyproject.toml  run_all_benchmarks.py  rust_code_with_structure.txt  three_way_comparison.csv
.circleci/: config.yml
Fork_Union/: Cargo.toml
Fork_Union/src/: adaptive_parallel.rs  auto_tuner.rs  histogram_builder.rs  huber_loss.rs  living_booster.rs  living_regressor.rs  metabolism.rs  model.rs  parallel.rs  regression.rs  tree.rs
autoresearch/: benchmark.py  experiment_loop.py  program.md  show_log.py
benchmark results/: all_benchmarks_results.csv  threeway_final.csv
benchmark results/Extras/: CHANGELOG_V2.md  adaptive_comparison_results.csv  drift_comparison_results.csv
data/: README.md  preprocessor.pkl
diagrams/: pkboost_system_architecture.drawio  state_machine.drawio
docs/: BENCHMARK_REPRODUCTION.md  DRIFT_BENCHMARK_REPORT.md  FEATURES.md  PROJECT_STRUCTURE.md  PYTHON_BINDINGS.md  README.md  SCRIPTS_GUIDE.md  V2_READY.md
examples/: benchmark_fraud.py  comprehensive_example.py  test_simple.py
fork_union experi/src/: adaptive_parallel.rs  histogram_builder.rs  lib.rs  living_booster.rs  loss.rs  metrics.rs  multiclass.rs  parallel.rs  partitioned_classifier.rs  tree.rs
pkboost/: __init__.py
pkboost/libpkboost.dylib.dSYM/Contents/: Info.plist
pkboost/libpkboost.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libpkboost.dylib.yml
pkboost_sklearn/: README.md  __init__.py  classifier.py  multiclass.py  regressor.py  sklearn_interface.py
python/: README.md  example.py  test_api.py
python/python_scripts/: download_creditcard.py  drift_comparison_all.py
raw_data/: README.md
resources/: comprehensive_benchmark.py  pybenchmark.py  test_drift_comparison.py  text.py
results/: 16_drift_scenarios_comparison.csv
src/: adaptive_parallel.rs  adversarial.rs  auto_params.rs  auto_tuner.rs  fork_parallel.rs  histogram_builder.rs  huber_loss.rs  lib.rs  living_booster.rs  living_regressor.rs  loss.rs  metrics.rs  model.rs  multiclass.rs  optimized_data.rs  partitioned_classifier.rs  python_bindings.rs  regression.rs  tree.rs  tree_regression.rs
tests/: test_serialization.py  test_sklearn_compat.py  test_sklearn_serialization.py
