[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pkboost"
version = "2.3.0"
description = "Gradient boosting that adapts to concept drift in imbalanced data"
authors = [{name = "Pushp Kharat", email = "kharatpushp16@outlook.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
sklearn = [
    "scikit-learn>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.6.0",
    "joblib",
    "ruff>=0.4.0",
]

[project.urls]
Repository = "https://github.com/scalevp-investment-ops/pkboost"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."

include = ["pkboost_sklearn/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
