[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pkboost-svp"
version = "2.3.5"
description = "Gradient boosting that adapts to concept drift in imbalanced data"
authors = [{name = "Pushp Kharat", email = "kharatpushp16@outlook.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
sklearn = [
    "scikit-learn>=1.0.0",
]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.0.0",
    "joblib",
    "ruff>=0.4.0",
]

[project.urls]
Repository = "https://github.com/scalevp-investment-ops/pkboost"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."

include = ["pkboost_sklearn/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Star import is standard for maturin extension module re-export
"pkboost/__init__.py" = ["F403", "F405"]
