[package]
name = "pkboost-fork-union"
version = "2.0.2"
edition = "2021"

[lib]
name = "pkboost"
crate-type = ["cdylib", "rlib"]

[dependencies]
fork_union = "2.3"
num_cpus = "1.16"
rand = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
half = { version = "2.4", features = ["std", "num-traits"] }
simsimd = "5.9"